--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,51 @@
     background-color: #197abe !important;
 }
 
-.carousel-img{
-    width: 100%;
-    height: 29rem;
+.nav-brand {
+    margin-left: 20px;
 }
 
-.p-margin{
+.nav-icon {
+    font-size: 45px;
+    margin-left: 30px;
+}
+
+h1 {
+    font-family: 'Roboto Flex', sans-serif;
+    font-size: 15px;
+    color: #ffff;
+}
+
+.retro-size {
+    font-size: 28px;
+    letter-spacing: 6px;
+}
+
+.nav-links {
+    font-family: 'Roboto Flex', sans-serif;
+    margin-right: 20px;
+}
+
+.nav-item {
+    margin-right: 10px;
+}
+
+.carousel-img{
+    width: 100%;
+    height: 38rem;
+}
+
+.h2 {
+    font-family: 'Roboto Flex', sans-serif;
+    font-size: 50px;
+}
+
+.carousel-style {
+    font-family: 'Poppins', sans-serif;
+    ;
+}
+
+.p-margin {
     margin-bottom: 18rem;
 }
 
@@ -20,8 +59,26 @@
     opacity: 0.9;
 }
 
+.title {
+  font-family: 'Poppins', sans-serif;
+}
+
 footer{
     background-color: #042444;
     margin: 0px !important;
     padding: 0px !important;
+}
+.test {
+    padding: 0;
+}
+.container {
+    font-family: 'Poppins', sans-serif;
+}
+
+.card-body {
+    font-family: 'Roboto Flex', sans-serif;
+}
+
+.card-text {
+    font-size: 13px;
 }
